--- a/django_sports/templates/navbar.html
+++ b/django_sports/templates/navbar.html
@@ -1,7 +1,11 @@
 <!-- Navigation -->
 <nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top">
   <div class="container-fluid narrower">
-    <a class="navbar-brand" href="{% url 'pages:homepage' %}">2k Tournament</a>
+    {% if not request.user.is_authenticated %}
+      <a class="navbar-brand" href="{% url 'pages:homepage' %}">2k Tournament</a>
+    {% else %}
+      <a class="navbar-brand" href="{% url 'pages:homepage' %}">Welcome, {{ request.user.profile.first_name }}</a>
+    {% endif %}
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
