--- a/django_sports/templates/shares/my_share.html
+++ b/django_sports/templates/shares/my_share.html
@@ -29,7 +29,7 @@
               <form action='{% url "pages:sell_request" %}' method="POST">
                 {% csrf_token %}
                 <input class="form-control extra-bottom" type="hidden" name='id' value="{{ my_share.id }}">
-                <input class="form-control extra-bottom" type="text" name='username' placeholder="Enter Username of Potential Buyer">
+                <!-- <input class="form-control extra-bottom" type="text" name='username' placeholder="Enter Username of Potential Buyer"> -->
                 <input class="form-control extra-bottom" type="text" name='numShares' placeholder="Enter # Shares to Sell">
                 <button class="btn btn-primary" type="submit">Send Sell Request</button>
               </form>
