--- a/django_sports/templates/shares/share.html
+++ b/django_sports/templates/shares/share.html
@@ -7,6 +7,7 @@
     <div class="card-body">
       <h4 class="card-title d-flex justify-content-center">{{ share.name }}</h4>
       <h6 class="d-flex justify-content-center extra-margin">{{ share.pricePerShare }} / share</h6>
+      <h6 class="d-flex justify-content-center extra-margin">{{ share.initialAmount }} Shares Left</h6>
       {% if request.user.is_authenticated %}
       <a data-toggle="modal" href="#test{{ share.id }}" class="btn btn-primary d-flex justify-content-center">Invest</a>
       {% endif %}
@@ -31,6 +32,7 @@
               <h2 class="text-uppercase center-text">{{ share.name }}</h2>
               <p class="item-intro text-muted">To win the NBA 2k20 Tournament</p>
               <ul class="list-inline">
+                <li>{{ share.initialAmount }} Shares Left</li>
                 <li>Odds {{ share.convertOddsToStr }}</li>
                 <li>Each winning share earns $10</li>
                 <!-- <li>Amount to invest: 0</li>
