--- a/django_sports/templates/index.html
+++ b/django_sports/templates/index.html
@@ -13,11 +13,10 @@
           </a>
 
         <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-          <a class="dropdown-item" href="#test-1-seeds">Seeds 1-2</a>
-          <a class="dropdown-item" href="#test-3-seeds">Seeds 3-4</a>
-          <a class="dropdown-item" href="#test-5-seeds">Seeds 5-6</a>
-          <a class="dropdown-item" href="#test-7-seeds">Seeds 7-8</a>
-          <a class="dropdown-item" href="#test-9-seeds">Seeds 9-10</a>
+          <a class="dropdown-item" href="#test-1-seeds">Seeds #1-4</a>
+          <a class="dropdown-item" href="#test-5-seeds">Seeds #5-8</a>
+          <a class="dropdown-item" href="#test-9-seeds">Seeds #9-12</a>
+          <a class="dropdown-item" href="#test-13-seeds">Seeds #13-16</a>
         </div>
       </div>
       </div>
