moneyline configured correctly

--- a/django_sports/templates/shares/game.html
+++ b/django_sports/templates/shares/game.html
@@ -30,8 +30,8 @@
               <!-- Project Details Go Here -->
               <h2 class="text-uppercase center-text">{{ share.home }} vs {{ share.away }}</h2>
               <ul class="game-list list-inline">
-                <li>{{ share.home }} ML: {{ share.awayML }}</li>
-                <li>{{ share.away }} ML: {{ share.homeML }}</li>
+                <li>{{ share.home }} ML: {{ share.homeML }}</li>
+                <li>{{ share.away }} ML: {{ share.awayML }}</li>
                 <li>{{ share.home }} Spread: {{ share.homeSpread }}</li>
                 <li>{{ share.away }} Spread: {{ share.awaySpread }}</li>
                 <!-- <li>Amount to invest: 0</li>
