allow people to sell from all shares

--- a/django_sports/templates/index.html
+++ b/django_sports/templates/index.html
@@ -1,6 +1,5 @@
 {% extends 'base.html' %}
 
-
 {% block content %}
 
   <header class="masthead text-center text-white">
@@ -14,10 +13,11 @@
           </a>
 
         <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-          <a class="dropdown-item" href="#test-1-seeds">Seeds #1-4</a>
-          <a class="dropdown-item" href="#test-5-seeds">Seeds #5-8</a>
-          <a class="dropdown-item" href="#test-9-seeds">Seeds #9-12</a>
-          <a class="dropdown-item" href="#test-13-seeds">Seeds #13-16</a>
+          <a class="dropdown-item" href="#test-1-seeds">Seeds 1-2</a>
+          <a class="dropdown-item" href="#test-3-seeds">Seeds 3-4</a>
+          <a class="dropdown-item" href="#test-5-seeds">Seeds 5-6</a>
+          <a class="dropdown-item" href="#test-7-seeds">Seeds 7-8</a>
+          <a class="dropdown-item" href="#test-9-seeds">Seeds 9-10</a>
         </div>
       </div>
       </div>
