--- a/django_sports/templates/shares/share_request.html
+++ b/django_sports/templates/shares/share_request.html
@@ -4,7 +4,7 @@
   <p class='share-element'>Current Price: {{ request.inv_share.share.pricePerShare }}</p>
   <p class='share-element'># Shares: {{ request.numShares }}</p>
   <div class="row">
-    <a data-toggle="modal" href="#portfolioModal2" class="btn btn-primary d-flex justify-content-center buy-btn">Buy</a>
+    <a data-toggle="modal" href="#test{{ request.id }}" class="btn btn-primary d-flex justify-content-center buy-btn">Buy</a>
     <!-- <a data-toggle="modal" href="#portfolioModal3" class="btn btn-primary d-flex justify-content-center reject-btn">Reject</a> -->
   </div>
 
@@ -13,7 +13,7 @@
 </div>
 
 <!-- modal of share -->
-<div class="portfolio-modal modal fade" id="portfolioModal2" tabindex="-1" role="dialog" aria-hidden="true">
+<div class="portfolio-modal modal fade" id="test{{ request.id }}" tabindex="-1" role="dialog" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="close-modal" data-dismiss="modal">
