--- a/django_sports/templates/shares/share_request.html
+++ b/django_sports/templates/shares/share_request.html
@@ -4,7 +4,15 @@
   <p class='share-element'>Current Price: {{ request.inv_share.share.pricePerShare }}</p>
   <p class='share-element'># Shares: {{ request.numShares }}</p>
   <div class="row">
+    {% if req.sender == request.user.profile %}
+    <form action='{% url "pages:reject_request" %}' method='POST'>
+      {% csrf_token %}
+      <input type='hidden' name='req' value='{{ request.id }}' />
+      <button type='submit'  style='color: white' class="btn btn-primary d-flex justify-content-center buy-btn">Take Back</button>
+    </form>
+    {% else %}
     <a data-toggle="modal" href="#test{{ request.id }}" class="btn btn-primary d-flex justify-content-center buy-btn">Buy</a>
+    {% endif %}
     <!-- <a data-toggle="modal" href="#portfolioModal3" class="btn btn-primary d-flex justify-content-center reject-btn">Reject</a> -->
   </div>
 
