--- a/django_sports/templates/my_shares.html
+++ b/django_sports/templates/my_shares.html
@@ -32,10 +32,10 @@
     </div>
 
     <div class="col-sm-6 buy-requests">
-      {% for request in my_sells %}
+      {% for req in my_sells %}
         {% include 'shares/share_request.html' with req=req %}
       {% endfor %}
-      {% for request in my_requests %}
+      {% for req in my_requests %}
         {% include 'shares/share_request.html' with req=req %}
       {% endfor %}
     </div>
