added bracket and history page

--- a/django_sports/templates/index.html
+++ b/django_sports/templates/index.html
@@ -11,6 +11,7 @@
           <a class="btn btn-primary btn-xl rounded-pill mt-5 dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Show me the seeds!
           </a>
+          <a class="btn btn-primary btn-xl rounded-pill mt-5" style='margin-left: 20px' href="https://challonge.com/users/nellyis2cool/tournaments" role="button">2k Bracket</a>
 
         <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
           <a class="dropdown-item" href="#test-1-seeds">Seeds 1-2</a>
