--- a/django_sports/templates/user_history.html
+++ b/django_sports/templates/user_history.html
@@ -7,6 +7,10 @@
 <div class='center-text profit parent-center'>
   <h2>Total Profit: ${{ profit }}</h2>
 </div>
+<div class='center-text extra-bottom parent-center'>
+  <h3>Total Share Sales: ${{ shareProfit }}</h3>
+</div>
+
 
 <div class='container'>
   <div class='row'>
