change to sportsbroer in base.html

--- a/django_sports/templates/base.html
+++ b/django_sports/templates/base.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Ball Street Sports</title>
+  <title>SportsBroker</title>
 
   <!-- Bootstrap core CSS -->
   {% load static %}
@@ -40,7 +40,7 @@
 <!-- Footer -->
   <footer class="py-5 bg-black foot">
     <div class="container">
-      <p class="m-0 text-center text-white small">Copyright &copy; Ball Street Sports 2020</p>
+      <p class="m-0 text-center text-white small">Copyright &copy; SportsBroker 2020</p>
     </div>
     <!-- /.container -->
   </footer>
