added links to baseball and basketball

--- a/django_sports/templates/index.html
+++ b/django_sports/templates/index.html
@@ -9,8 +9,8 @@
         <h2 class="masthead-subheading mb-0">Where it's Always a Bull Market</h2>
         <div class="">
           <a class="btn btn-primary btn-xl rounded-pill mt-5" href="{% url 'pages:events' 'Football' %}" role="button">Football</a>
-          <a class="btn btn-primary btn-xl rounded-pill mt-5" style='margin-left: 20px' href="#" role="button">Baseball</a>
-          <a class="btn btn-primary btn-xl rounded-pill mt-5" style='margin-left: 20px' href="#" role="button">Basketball</a>
+          <a class="btn btn-primary btn-xl rounded-pill mt-5" style='margin-left: 20px' href="{% url 'pages:events' 'Baseball' %}" role="button">Baseball</a>
+          <a class="btn btn-primary btn-xl rounded-pill mt-5" style='margin-left: 20px' href="{% url 'pages:events' 'Basketball' %}" role="button">Basketball</a>
       </div>
       </div>
     </div>
