added rules page and ability to keep track of when users pay Shane

--- a/django_sports/templates/index.html
+++ b/django_sports/templates/index.html
@@ -11,7 +11,8 @@
           <a class="btn btn-primary btn-xl rounded-pill mt-5" href="{% url 'pages:events' 'Football' %}" role="button">Football</a>
           <a class="btn btn-primary btn-xl rounded-pill mt-5" style='margin-left: 20px' href="{% url 'pages:events' 'Baseball' %}" role="button">Baseball</a>
           <a class="btn btn-primary btn-xl rounded-pill mt-5" style='margin-left: 20px' href="{% url 'pages:events' 'Basketball' %}" role="button">Basketball</a>
-      </div>
+        </div>
+        <a class="btn btn-primary btn-xl rounded-pill mt-5" href="{% url 'pages:rules' %}" role="button">Rules to Site</a>
       </div>
     </div>
   </header>
