minor change to site name

--- a/django_sports/templates/index.html
+++ b/django_sports/templates/index.html
@@ -5,7 +5,7 @@
   <header class="masthead text-center text-white">
     <div class="masthead-content">
       <div class="container">
-        <h1 class="masthead-heading mb-0">SportsBroker</h1>
+        <h1 class="masthead-heading mb-0">SportsBrokerage</h1>
         <h2 class="masthead-subheading mb-0">Where it's Always a Bull Market</h2>
         <div class="">
           <a class="btn btn-primary btn-xl rounded-pill mt-5" href="{% url 'pages:events' 'Football' %}" role="button">Football</a>
