--- a/django_sports/templates/base.html
+++ b/django_sports/templates/base.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>SportsBroker</title>
+  <title>SportsBrokerage</title>
 
   <!-- Bootstrap core CSS -->
   {% load static %}
