--- a/django_sports/templates/navbar.html
+++ b/django_sports/templates/navbar.html
@@ -2,7 +2,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top">
   <div class="container-fluid narrower">
     {% if not request.user.is_authenticated %}
-      <a class="navbar-brand" href="{% url 'pages:homepage' %}">SportsBroker</a>
+      <a class="navbar-brand" href="{% url 'pages:homepage' %}">Sports Brokerage</a>
     {% else %}
       <a class="navbar-brand" href="{% url 'pages:homepage' %}">Welcome, {{ request.user.profile.first_name }}</a>
     {% endif %}
